--- a/src/Protobuf/Protobuf.csproj
+++ b/src/Protobuf/Protobuf.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Google.ProtocolBuffers" Version="2.4.1.555" />
+    <PackageReference Include="System.Reactive" Version="4.1.6" />
   </ItemGroup>
 
   <ItemGroup>
