Fixed some issues on console tester

--- a/src/ConsoleTester/ConsoleTester.csproj
+++ b/src/ConsoleTester/ConsoleTester.csproj
@@ -41,6 +41,12 @@
     <Reference Include="Google.ProtocolBuffers.Serialization, Version=2.4.1.555, Culture=neutral, PublicKeyToken=55f7125234beb589, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Google.ProtocolBuffers.2.4.1.555\lib\net40\Google.ProtocolBuffers.Serialization.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Newtonsoft.Json.12.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="RestSharp, Version=106.6.10.0, Culture=neutral, PublicKeyToken=598062e77f915f75, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\RestSharp.106.6.10\lib\net452\RestSharp.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Reactive, Version=4.1.0.0, Culture=neutral, PublicKeyToken=94bc3704cddfc263, processorArchitecture=MSIL">
@@ -55,6 +61,7 @@
     <Reference Include="System.ValueTuple, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\..\packages\System.ValueTuple.4.5.0\lib\net47\System.ValueTuple.dll</HintPath>
     </Reference>
+    <Reference Include="System.Web" />
     <Reference Include="System.Windows" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
@@ -77,6 +84,10 @@
     <ProjectReference Include="..\Common\Common.csproj">
       <Project>{5a818e31-090f-4067-9d78-5461196b3897}</Project>
       <Name>Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Oauth\Oauth.csproj">
+      <Project>{94f80471-44cc-4294-96a8-4f8f1547d76f}</Project>
+      <Name>Oauth</Name>
     </ProjectReference>
     <ProjectReference Include="..\Protobuf\Protobuf.csproj">
       <Project>{188e3664-8cdc-49d6-a130-6ddf97e9c956}</Project>
