--- a/src/Protobuf/Protobuf.csproj
+++ b/src/Protobuf/Protobuf.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Messages\CommonMessages.cs" />
+    <Compile Remove="Messages\CommonModelMessages.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Google.ProtocolBuffers" Version="2.4.1.555" />
     <PackageReference Include="System.Reactive" Version="4.4.1" />
   </ItemGroup>
