--- a/src/ConsoleTester/packages.config
+++ b/src/ConsoleTester/packages.config
@@ -1,8 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Google.ProtocolBuffers" version="2.4.1.555" targetFramework="net471" />
+  <package id="Google.Protobuf" version="3.12.3" targetFramework="net471" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net471" />
   <package id="RestSharp" version="106.11.4" targetFramework="net471" />
+  <package id="System.Buffers" version="4.4.0" targetFramework="net471" />
+  <package id="System.Memory" version="4.5.2" targetFramework="net471" />
+  <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net471" />
   <package id="System.Reactive" version="4.4.1" targetFramework="net471" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net471" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net471" />
