--- a/src/Common/Common.csproj
+++ b/src/Common/Common.csproj
@@ -4,6 +4,17 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <AssemblyName>ConnectCommon</AssemblyName>
     <RootNamespace>Connect.Common</RootNamespace>
+    <PackageId>Connect.Common</PackageId>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Authors>AlgoDeveloper</Authors>
+    <Company>AlgoDeveloper</Company>
+    <Product>Connect.Common</Product>
+    <Description>This package contains common are shared code in between Connect.Oauth and Connect.Protobuf libraries and both of them are dependent on this</Description>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageProjectUrl>https://github.com/afhacker/Connect/tree/master/src/Common</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/afhacker/Connect</RepositoryUrl>
+    <PackageTags>cTrader</PackageTags>
+    <NeutralLanguage>en-US</NeutralLanguage>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
