--- a/src/Oauth/Oauth.csproj
+++ b/src/Oauth/Oauth.csproj
@@ -4,9 +4,22 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <AssemblyName>ConnectOauth</AssemblyName>
     <RootNamespace>Connect.Oauth</RootNamespace>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageId>Connect.Oauth</PackageId>
+    <Authors>AlgoDeveloper</Authors>
+    <Company>AlgoDeveloper</Company>
+    <Product>Connect.Oauth</Product>
+    <Description>This package perform the authentication process of Connect API</Description>
+    <Copyright />
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <RepositoryUrl>https://github.com/afhacker/Connect</RepositoryUrl>
+    <PackageProjectUrl>https://github.com/afhacker/Connect/tree/master/src/Oauth</PackageProjectUrl>
+    <PackageTags>cTrader</PackageTags>
+    <NeutralLanguage>en-US</NeutralLanguage>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Connect.Common" Version="1.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="RestSharp" Version="106.11.4" />
   </ItemGroup>
