--- a/src/Common/Common.csproj
+++ b/src/Common/Common.csproj
@@ -15,6 +15,7 @@
     <RepositoryUrl>https://github.com/afhacker/Connect</RepositoryUrl>
     <PackageTags>cTrader</PackageTags>
     <NeutralLanguage>en-US</NeutralLanguage>
+    <Version>1.0.0.1</Version>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
