--- a/src/Oauth/Oauth.csproj
+++ b/src/Oauth/Oauth.csproj
@@ -16,10 +16,11 @@
     <PackageProjectUrl>https://github.com/afhacker/Connect/tree/master/src/Oauth</PackageProjectUrl>
     <PackageTags>cTrader</PackageTags>
     <NeutralLanguage>en-US</NeutralLanguage>
+    <Version>1.0.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Connect.Common" Version="1.0.0" />
+    <PackageReference Include="Connect.Common" Version="1.0.0.1" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="RestSharp" Version="106.11.4" />
   </ItemGroup>
