--- a/src/Protobuf/Protobuf.csproj
+++ b/src/Protobuf/Protobuf.csproj
@@ -15,6 +15,7 @@
     <RepositoryUrl>https://github.com/afhacker/Connect</RepositoryUrl>
     <PackageTags>cTrader</PackageTags>
     <NeutralLanguage>en-US</NeutralLanguage>
+    <Version>1.0.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
@@ -29,7 +30,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Connect.Common" Version="1.0.0" />
+    <PackageReference Include="Connect.Common" Version="1.0.0.1" />
     <PackageReference Include="Google.Protobuf" Version="3.12.3" />
     <PackageReference Include="System.Reactive" Version="4.4.1" />
   </ItemGroup>
